--- a/style.css
+++ b/style.css
@@ -47,8 +47,158 @@ nav .icon {
 /* header */
 
 header {
-      height: 550px;
+      height: 540px;
       background-image: url(images/header.png);
       background-size: cover;
       background-position: bottom;
+}
+
+header .container {
+      height: 100%;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+}
+
+header .texts {
+      max-width: 530px;
+}
+
+header .texts * {
+      margin-bottom: 20px;
+}
+
+header .texts h1 {
+      font-family: "Righteous", sans-serif;
+      font-size: 72px;
+      font-weight: 400;
+      color: white;
+}
+
+header .texts p {
+      font-family: "Urbanist", sans-serif;
+      font-size: 20px;
+      font-weight: 500;
+      color: #FFFFFFCC;
+}
+
+header .texts button {
+      color: white;
+      font-size: 18px;
+      cursor: pointer;
+      font-weight: 700;
+      font-family: "Inter", sans-serif;
+      padding: 24px 40px;
+      background-color: #C99E71;
+      border: none;
+      outline: none;
+}
+
+header .texts button:hover {
+      opacity: 0.7;
+}
+
+header .video-wrapper {
+      width: 350px;
+      height: 350px;
+      cursor: pointer;
+      background-color: rgba(255, 255, 255, 0.171);
+      display: flex;
+      border-radius: 50%;
+      align-items: center;
+      justify-content: center;
+      flex-direction: column;
+      color: white;
+      text-align: center;
+}
+
+header .play-icon {
+      font-size: 100px;
+      color: white;
+      text-decoration: none;
+      margin-bottom: 20px;
+}
+
+/* modal */
+
+.modal-wrapper {
+      width: 100%;
+      height: 100vh;
+      display: flex;
+      position: fixed;
+      opacity: 0;
+      visibility: hidden;
+      transition: all ease 0.3s;
+      top: 0;
+      align-items: center;
+      justify-content: center;
+      background-color: rgba(0, 0, 0, 0.651);
+}
+
+.show-modal {
+      visibility: visible;
+      opacity: 1;
+}
+
+.modal {
+      width: 500px;
+      height: 550px;
+      position: relative;
+      background-color: #1C1814;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+}
+
+.modal h4 {
+      font-family: "Urbanist", sans-serif;
+      font-size: 18px;
+      font-weight: 600;
+      color: #C99E71;
+      margin-bottom: 12px;
+}
+
+.modal h2 {
+      font-size: 48px;
+      font-family: "Righteous", sans-serif;
+      font-weight: 400;
+      color: #FFFFFF;
+      margin-bottom: 56px;
+}
+
+.modal input {
+      width: 80%;
+      height: 50px;
+      border: none;
+      padding: 0 20px;
+      background-color: #14110E;
+      outline: none;
+      color: #FFFFFFCC;
+      font-size: 18px;
+      font-weight: 600;
+      font-family: "Urbanist";
+      margin-bottom: 24px;
+}
+
+.modal button {
+      border: none;
+      outline: none;
+      cursor: pointer;
+      padding: 20px 36px;
+      color: #FFFFFF;
+      background-color: #C99E71;
+}
+
+.modal button:hover {
+      opacity: 0.7;
+}
+
+.modal .close-icon {
+      font-size: 50px;
+      cursor: pointer;
+      position: absolute;
+      color: #C99E71;
+      top: 20px;
+      right: 20px;
 }
